<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AccueilUtilisateur"
        android:textColor="#304FFE"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <LinearLayout
            android:id="@+id/fname_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fname_label_getter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fname_label_getter"
                android:textColor="#304FFE"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/fname_text_getter"
                android:layout_width="@dimen/dim0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fname_text_getter"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_label_getter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label_getter"
                android:textColor="#304FFE"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/name_text_getter"
                android:layout_width="@dimen/dim0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_text_getter"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender_label_getter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label_getter"
                android:textColor="#304FFE"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/gender_text_getter"
                android:layout_width="@dimen/dim0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_text_getter"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_label_getter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label_getter"
                android:textColor="#304FFE"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/email_text_getter"
                android:layout_width="@dimen/dim0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_text_getter"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>